feat(CV): add personal projects section, update CV css for better window size scaling

--- a/index.html
+++ b/index.html
@@ -30,150 +30,163 @@
 						<!-- Me -->
 							<article id="home" class="panel intro">
 								<header>
-									<h1>Tiago Deane</h1> <!-- TODO: talvez pôr linha em baixo disso pra separar visualmente o nome do profile? -->
-									<span class="text">TODO: Profile here (team skills, "passion" wow!)</span> <!-- TODO: style this-->
+									<h1>Tiago Deane</h1>
+									<span class="text">Student, Programmer</span>
 								</header>
 								<a href="#CV" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
 									<img src="images/me.jpg" alt="" />
 								</a>
-								<div id="visitor-counter">Number of visits: <span id="visitor-count"></span> (also, maybe put contact icons here?)</div>
+								<div id="visitor-counter">Number of visits: <span id="visitor-count"></span></div>
 							</article>
 
 						<!-- Curriculum -->
-							<article id="CV" class="panel cv-panel">
-								<!--
-								<header>
-									<h2>Tiago Deane</h2>
-								</header>
-								-->
+							<article id="CV" class="panel cv">
 
 								<!-- Left Sidebar Section -->
-									<div class="cv-left">
-										<div class="aside-section">
-											<h3 class = "title aside">Certifications</h3>
-											<ul>
-												<li><span class="text">AWS Certified Cloud Practitioner</span></li>
-												<li><span class="text">AWS Solutions Architect (Associate)</span></li>
-												<li><a href="https://www.credly.com/users/tiago-deane-motta-e-silva">Credly</a></li>
-											</ul>
-											<h3 class = "title aside">Skills</h3>
-											<ul>
-												<li><span class="text">Backend: Python, Java, C, C++, SQL, Groovy</span></li>
-												<li><span class="text">Frontend: HTTP, CSS, JavaScript, Vue.js, Cypress</span></li>
-												<li><span class="text">AWS: S3, EC2, etc</span></li>
-											</ul>
-											<h3 class = "title aside">Languages</h3>
-											<ul>
-												<li><span class="text">English - Fluent (C2)</span></li>
-												<li><span class="text">Portuguese - Native</span></li>
-											</ul>
-											<h3 class = "title aside">Citizenship</h3>
-											<ul>
-												<li><span class="text">Portuguese</span></li>
-												<li><span class="text">British</span></li>
-												<li><span class="text">Brazilian</span></li>
-											</ul>
-										</div>
+								<div class="cv-left">
+									<div class="aside-section">
+										<h3 class = "title aside">Certifications</h3>
+										<ul>
+											<li><span class="text">AWS Certified Cloud Practitioner</span></li>
+											<li><span class="text">AWS Solutions Architect (Associate)</span></li>
+											<li><a href="https://www.credly.com/users/tiago-deane-motta-e-silva">Credly</a></li>
+										</ul>
+										<h3 class = "title aside">Skills</h3>
+										<ul>
+											<li><span class="text">Backend: Python, Java, C, C++, SQL, Groovy</span></li>
+											<li><span class="text">Frontend: HTTP, CSS, JavaScript, Vue.js, Cypress</span></li>
+											<li><span class="text">AWS: S3, EC2, DynamoDB, Lambda, ELB</span></li>
+										</ul>
+										<h3 class = "title aside">Languages</h3>
+										<ul>
+											<li><span class="text">English - Fluent (C2)</span></li>
+											<li><span class="text">Portuguese - Native</span></li>
+										</ul>
+										<h3 class = "title aside">Citizenship</h3>
+										<ul>
+											<li><span class="text">Portuguese</span></li>
+											<li><span class="text">British</span></li>
+											<li><span class="text">Brazilian</span></li>
+										</ul>
 									</div>
+								</div>
+								
+								<!-- Main CV Section -->
+								<div class="cv-right">
+									<div class="main-section">
+										<h3 class="title main">
+											<span class="icon solid fa-user" style="margin-right: 0.5rem;"></span>
+											Profile
+										</h3>
+										<span class="text main">&nbsp;&nbsp;&nbsp;&nbsp;Currently doing a Master's in Computer Science and Engineering at Instituto Superior Técnico, one of the best engineering universities in Europe and the best in Portugal. During breaks, I study to get AWS Certifications and further my knowledge. Passionate about learning new things, and with a great desire to work abroad and experience different cultures.</span>
 
-									<div class="cv-right">
-										<div class="main-section">
-											<h3 class="title main">
-												<span class="icon solid fa-graduation-cap" style="margin-right: 0.5rem;"></span>
-												Education
-											</h3>
+										<h3 class="title main">
+											<span class="icon solid fa-graduation-cap" style="margin-right: 0.5rem;"></span>
+											Education
+										</h3>
 
-											<div class="education-entry">
-												<div class="edu-left">
-													<div class="edu-row">
-														<span class="icon solid fa-calendar-alt"></span>
-														<span class="edu-text">2024–2026 (expected)</span>
-													</div>
-													<div class="edu-row"> 
-														<img src="images/tecnico.svg" alt="IST Icon" class="icon-svg" />
-														<span class="edu-text">Instituto Superior Técnico</span>
-													</div>
-													<div class="edu-row">
-														<span class="icon solid fa-map-marker-alt"></span>
-														<span class="edu-text">Lisbon, Portugal</span>
-													</div>
+										<div class="education-entry">
+											<div class="edu-left">
+												<div class="edu-row">
+													<span class="icon solid fa-calendar-alt"></span>
+													<span class="edu-text">2024–2026 (expected)</span>
 												</div>
-												<div class="edu-right">
-													<span class="degree-text">Master’s in Computer Science and Engineering (MEIC-A)</span>
+												<div class="edu-row"> 
+													<img src="images/tecnico.svg" alt="IST Icon" class="icon-svg" />
+													<span class="edu-text">Instituto Superior Técnico</span>
+												</div>
+												<div class="edu-row">
+													<span class="icon solid fa-map-marker-alt"></span>
+													<span class="edu-text">Lisbon, Portugal</span>
 												</div>
 											</div>
-											<ul class="outer-list">
-												<li>
-													<span class="text">Specializing in Software Engineering and Distributed Systems</span>
-												</li>
-												<li>
-													<span class="text">Some interesting projects (placeholders):</span>
-													<ul>
-														<li>
-															<span class="text">Software Architecture: </span>
-															<a href="https://drive.google.com/file/d/1ynopk11kCrzBkzTSMUZu9iji_91PcrWR/view?usp=sharing">Web Crawler Case Study</a>
-														</li>
-														<li>
-															<span class="text">Software Security [Python]: </span>
-															<a href="https://github.com/TiDeane/Js-Vulnerabilities">JavaScript Vulnerability Detection</a>
-														</li>
-														<li>
-															<span class="text">Advanced Programming (metaprogramming in Julia): </span>
-															<a href="https://github.com/TiDeane/Julia-Exceptions">Julia Restarts</a>
-														</li>
-													</ul>
-												</li>
-											</ul>
+											<div class="edu-right">
+												<span class="degree-text">Master’s in Computer Science and Engineering (MEIC-A)</span>
+											</div>
+										</div>
+										
+										<ul class="outer-list">
+											<li>
+												<span class="text">Specializing in Software Engineering and Distributed Systems</span>
+											</li>
+											<li>
+												<span class="text">Some interesting projects:</span>
+												<ul>
+													<li>
+														<span class="text">Cloud Computing and Virtualization [Java, EC2, DynamoDB, Lambda]: </span>
+														<a href="https://github.com/TiDeane/CNV-Cloud-Webserver/">Games@Cloud</a>
+													</li>
+													<li>
+														<span class="text">Software Architecture: </span>
+														<a href="https://drive.google.com/file/d/1ynopk11kCrzBkzTSMUZu9iji_91PcrWR/view?usp=sharing">Web Crawler Case Study</a>
+													</li>
+													<li>
+														<span class="text">Software Security [Python]: </span>
+														<a href="https://github.com/TiDeane/Js-Vulnerabilities">JavaScript Vulnerability Detection</a>
+													</li>
+												</ul>
+											</li>
+										</ul>
 
-											<div class="education-entry">
-												<div class="edu-left">
-													<div class="edu-row">
-														<span class="icon solid fa-calendar-alt"></span>
-														<span class="edu-text">2021–2024</span>
-													</div>
-													<div class="edu-row"> 
-														<img src="images/tecnico.svg" alt="IST Icon" class="icon-svg" />
-														<span class="edu-text">Instituto Superior Técnico</span>
-													</div>
-													<div class="edu-row">
-														<span class="icon solid fa-map-marker-alt"></span>
-														<span class="edu-text">Lisbon, Portugal</span>
-													</div>
+										<div class="education-entry">
+											<div class="edu-left">
+												<div class="edu-row">
+													<span class="icon solid fa-calendar-alt"></span>
+													<span class="edu-text">2021–2024</span>
 												</div>
-												<div class="edu-right">
-													<span class="degree-text">Bachelor's in Computer Science and Engineering (LEIC-A)</span>
+												<div class="edu-row"> 
+													<img src="images/tecnico.svg" alt="IST Icon" class="icon-svg" />
+													<span class="edu-text">Instituto Superior Técnico</span>
+												</div>
+												<div class="edu-row">
+													<span class="icon solid fa-map-marker-alt"></span>
+													<span class="edu-text">Lisbon, Portugal</span>
 												</div>
 											</div>
-											<ul class="outer-list last">
-												<li>
-													<span class="text">Some relevant projects (placeholders):</span>
-													<ul>
-														<li>
-															<span class="text">Software Engineering [Java, Groovy, Vue.js, Cypress]: </span>
-															<a href="https://github.com/TiDeane/HumanaEthica-ES">HumanaEthica</a>
-														</li>
-														<li>
-															<span class="text">Databases [SQL, Python, HTML]: </span>
-															<a href="https://github.com/TiDeane/Web-App-Database-Manager">Database Manager</a>
-														</li>
-														<li>
-															<span class="text">Compilers [C++]: </span>
-															<a href="https://github.com/TiDeane/TIL-Compiler">TIL Compiler</a>
-														</li>
-													</ul>
-												</li>
-											</ul>
-
-											<h3 class="title main">
-												<span class="icon solid fa-paint-brush" style="margin-right: 0.5rem;"></span>
-												Open Source
-											</h3>
-											<span class="os-text">For my Bachelor's integrated project I briefly worked on <a href="https://airflow.apache.org/">Apache Airflow</a>, fixing a <a href="https://github.com/apache/airflow/pull/38502">bug</a> and implementing a <a href="https://github.com/apache/airflow/pull/39564">feature</a>, along with fixing or implementing tests for both.</span>
-
-											<!-- what more...? -->
+											<div class="edu-right">
+												<span class="degree-text">Bachelor's in Computer Science and Engineering (LEIC-A)</span>
+											</div>
 										</div>
+										<ul class="outer-list last">
+											<li>
+												<span class="text">Some interesting projects (placeholders):</span>
+												<ul>
+													<li>
+														<span class="text">Software Engineering [Java, Groovy, Vue.js, Cypress]: </span>
+														<a href="https://github.com/TiDeane/HumanaEthica-ES">HumanaEthica</a>
+													</li>
+													<li>
+														<span class="text">Databases [SQL, Python, HTML]: </span>
+														<a href="https://github.com/TiDeane/Web-App-Database-Manager">Database Manager</a>
+													</li>
+													<li>
+														<span class="text">Compilers [C++]: </span>
+														<a href="https://github.com/TiDeane/TIL-Compiler">TIL Compiler</a>
+													</li>
+												</ul>
+											</li>
+										</ul>
+
+										<h3 class="title main">
+											<span class="icon solid fa-paint-brush" style="margin-right: 0.5rem;"></span>
+											Open Source
+										</h3>
+										<span class="text main">&nbsp;&nbsp;&nbsp;&nbsp;For my Bachelor's integrated project I briefly worked on <a href="https://airflow.apache.org/">Apache Airflow</a>, fixing a <a href="https://github.com/apache/airflow/pull/38502">bug</a> and implementing a <a href="https://github.com/apache/airflow/pull/39564">feature</a>, along with fixing/implementing tests for both.</span>
+
+										<h3 class="title main">
+											<span class="icon solid fa-paint-brush" style="margin-right: 0.5rem;"></span>
+											Personal Projects
+										</h3>
+										<ul class="outer-list last">
+											<li>
+												<span class="text personal"><a href="TODO:link-to-a-README-file-later">Cloud Resume</a>: I developed this website with the goal of experimenting with some AWS services that I hadn't used before, along with practicing CSS and HTML.</span>
+											</li>
+											<li>
+												<span class="text personal"><a href="https://github.com/TiDeane/Firefox-Link-Highlighter">Firefox Link Highlighter</a>: this Firefox addon was my first paid software project. It is a toggle that highlights all links clicked or opened while the extension was toggled on, with the goal of being used to help recruiters and researchers.</span>
+											</li>
 									</div>
+								</div>
 
 							</article>
 
