feat: improve styling for CV section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
 									<img src="images/me.jpg" alt="" />
 								</a>
-								<div id="visitor-counter">Number of visits: <span id="visitor-count"></span></div>
+								<div id="visitor-counter"><span id="visitor-message">Loading top countries...</span></div>
 							</article>
 
 						<!-- Curriculum -->
@@ -54,9 +54,9 @@
 										</ul>
 										<h3 class = "title aside">Skills</h3>
 										<ul>
-											<li><span class="text">Backend: Python, Java, C, C++, SQL, Groovy</span></li>
-											<li><span class="text">Frontend: HTTP, CSS, JavaScript, Vue.js, Cypress</span></li>
-											<li><span class="text">AWS: S3, EC2, DynamoDB, Lambda, ELB</span></li>
+											<li><span class="text"><span class="skill">Backend:</span> Python, Java, C, C++, SQL</span></li>
+											<li><span class="text"><span class="skill">Frontend</span>: HTTP, CSS, JavaScript</span></li>
+											<li><span class="text"><span class="skill">AWS</span>: S3, EC2, DynamoDB, Lambda, API Gateway</span></li>
 										</ul>
 										<h3 class = "title aside">Languages</h3>
 										<ul>
@@ -108,7 +108,7 @@
 										
 										<ul class="outer-list">
 											<li>
-												<span class="text">Specializing in Software Engineering and Distributed Systems</span>
+												<span class="text">Specializing in <u>Software Engineering</u> and <u>Distributed Systems</u></span>
 											</li>
 											<li>
 												<span class="text">Some interesting projects:</span>
@@ -172,19 +172,20 @@
 											<span class="icon solid fa-paint-brush" style="margin-right: 0.5rem;"></span>
 											Open Source
 										</h3>
-										<span class="text main">&nbsp;&nbsp;&nbsp;&nbsp;For my Bachelor's integrated project I briefly worked on <a href="https://airflow.apache.org/">Apache Airflow</a>, fixing a <a href="https://github.com/apache/airflow/pull/38502">bug</a> and implementing a <a href="https://github.com/apache/airflow/pull/39564">feature</a>, along with fixing/implementing tests for both.</span>
+										<span class="text main">&nbsp;&nbsp;&nbsp;&nbsp;For my Bachelor's integrated project I briefly worked on <a href="https://airflow.apache.org/">Apache Airflow</a>, fixing a <a href="https://github.com/apache/airflow/pull/38502">bug</a> and implementing a <a href="https://github.com/apache/airflow/pull/39564">feature</a>, along with fixing/implementing tests for both. This was my first experience working on an already established large-scale project.</span>
 
 										<h3 class="title main">
 											<span class="icon solid fa-paint-brush" style="margin-right: 0.5rem;"></span>
 											Personal Projects
 										</h3>
-										<ul class="outer-list last">
+										<ul>
 											<li>
-												<span class="text personal"><a href="TODO:link-to-a-README-file-later">Cloud Resume</a>: I developed this website with the goal of experimenting with some AWS services that I hadn't used before, along with practicing CSS and HTML.</span>
+												<span class="text personal"><a href="TODO:link-to-a-README-file-later">Cloud Resume</a>: I developed this website with the goal of experimenting with some AWS services that I hadn't used before, such as API Gateway, along with practicing CSS and HTML.</span>
 											</li>
 											<li>
 												<span class="text personal"><a href="https://github.com/TiDeane/Firefox-Link-Highlighter">Firefox Link Highlighter</a>: this Firefox addon was my first paid software project. It is a toggle that highlights all links clicked or opened while the extension was toggled on, with the goal of being used to help recruiters and researchers.</span>
 											</li>
+										</ul>
 									</div>
 								</div>
 
