feat: small changes to CV, hide visitor counter when vertical layout

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 												<ul>
 													<li>
 														<span class="text">Cloud Computing and Virtualization [Java, EC2, DynamoDB, Lambda]: </span>
-														<a href="https://github.com/TiDeane/CNV-Cloud-Webserver/">Games@Cloud</a>
+														<a href="https://github.com/TiDeane/CNV-Cloud-Webserver/blob/master/final_project_report_CNV_g28.pdf">Games@Cloud</a>
 													</li>
 													<li>
 														<span class="text">Software Architecture: </span>
@@ -150,7 +150,7 @@
 										</div>
 										<ul class="outer-list last">
 											<li>
-												<span class="text">Some interesting projects (placeholders):</span>
+												<span class="text">Some interesting projects:</span>
 												<ul>
 													<li>
 														<span class="text">Software Engineering [Java, Groovy, Vue.js, Cypress]: </span>
@@ -161,10 +161,25 @@
 														<a href="https://github.com/TiDeane/Web-App-Database-Manager">Database Manager</a>
 													</li>
 													<li>
-														<span class="text">Compilers [C++]: </span>
-														<a href="https://github.com/TiDeane/TIL-Compiler">TIL Compiler</a>
+														<span class="text">Distributed Systems [Java, Python, gRPC]: </span>
+														<a href="https://github.com/TiDeane/TupleSpaces-SD">TupleSpaces</a>
 													</li>
 												</ul>
+											</li>
+										</ul>
+
+										
+										<h3 class="title main">
+											<span class="icon solid fa-paint-brush" style="margin-right: 0.5rem;"></span>
+											Other Projects
+										</h3>
+										<ul>
+											<li>
+												<!-- After writing a general post on my process over the development of this project, change this link -->
+												<span class="text personal"><a href="https://github.com/TiDeane/Cloud-Resume-frontend">Cloud Resume</a>: I took on the Cloud Resume Challenge with two objectives in mind: I wanted to create a serverless backend using API Gateway and Lambda, as well as practice HTML, Javascript and CSS.</span>
+											</li>
+											<li>
+												<span class="text personal"><a href="https://github.com/TiDeane/Firefox-Link-Highlighter">Firefox Link Highlighter</a>: this Firefox addon was my first paid software project. It is a toggle that highlights all links clicked or opened while the extension was toggled on, with the goal of being used to help recruiters and researchers.</span>
 											</li>
 										</ul>
 
@@ -173,19 +188,6 @@
 											Open Source
 										</h3>
 										<span class="text main">&nbsp;&nbsp;&nbsp;&nbsp;For my Bachelor's integrated project I briefly worked on <a href="https://airflow.apache.org/">Apache Airflow</a>, fixing a <a href="https://github.com/apache/airflow/pull/38502">bug</a> and implementing a <a href="https://github.com/apache/airflow/pull/39564">feature</a>, along with fixing/implementing tests for both. This was my first experience working on an already established large-scale project.</span>
-
-										<h3 class="title main">
-											<span class="icon solid fa-paint-brush" style="margin-right: 0.5rem;"></span>
-											Personal Projects
-										</h3>
-										<ul>
-											<li>
-												<span class="text personal"><a href="TODO:link-to-a-README-file-later">Cloud Resume</a>: I developed this website with the goal of experimenting with some AWS services that I hadn't used before, such as API Gateway, along with practicing CSS and HTML.</span>
-											</li>
-											<li>
-												<span class="text personal"><a href="https://github.com/TiDeane/Firefox-Link-Highlighter">Firefox Link Highlighter</a>: this Firefox addon was my first paid software project. It is a toggle that highlights all links clicked or opened while the extension was toggled on, with the goal of being used to help recruiters and researchers.</span>
-											</li>
-										</ul>
 									</div>
 								</div>
 
@@ -240,31 +242,3 @@
 			<script src="assets/js/visitorCount.js"></script>
 	</body>
 </html>
-
-<!--
-<header>
-	<h2>Contact Me</h2>
-</header>
-<footer>
-	<ul class="items">
-		<li>
-			<h3>Email</h3>
-			<a href="mailto:tiagortg@gmail.com">tiagortg@gmail.com</a>
-		</li>
-		<li>
-			<h3>Others</h3>
-			<ul class="icons">
-				<li><a href="https://www.linkedin.com/in/tiago-deane-8053a5338/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span><span class="tooltip">Tiago Deane</span></a></li>
-				<li><a href="https://github.com/TiDeane" class="icon brands fa-github"><span class="label">GitHub</span><span class="tooltip">TiDeane</span></a></li>
-				<li><a href="https://discordapp.com/users/197405278172479498" class="icon brands fa-discord"><span class="label">Discord</span><span class="tooltip">tideane</span></a></li>
-				<li>
-					<a href="https://www.credly.com/users/tiago-deane-motta-e-silva" class="icon custom-icon">
-						<img src="images/newCredly2.png" alt="Credly" class="icon-img" />
-						<span class="label">Credly</span><span class="tooltip">Credly</span>
-					</a>
-				</li>
-			</ul>
-		</li>
-	</ul>
-</footer>
--->
