fix: change browser extension name on CV

--- a/index.html
+++ b/index.html
@@ -176,10 +176,10 @@
 										<ul>
 											<li>
 												<!-- After writing a general post on my process over the development of this project, change this link -->
-												<span class="text personal"><a href="https://github.com/TiDeane/Cloud-Resume-frontend">Cloud Resume</a>: I took on the Cloud Resume Challenge with two objectives in mind: I wanted to create a serverless backend using API Gateway and Lambda, as well as practice HTML, Javascript and CSS.</span>
+												<span class="text personal"><a href="https://github.com/TiDeane/Cloud-Resume-frontend">Cloud Resume</a>: I took on the Cloud Resume Challenge with a couple of objectives: host a website on S3 and CloudFront; practice HTML, Javascript and CSS; and create a serverless backend using API Gateway and Lambda.</span>
 											</li>
 											<li>
-												<span class="text personal"><a href="https://github.com/TiDeane/Firefox-Link-Highlighter">Firefox Link Highlighter</a>: this Firefox addon was my first paid software project. It is a toggle that highlights all links clicked or opened while the extension was toggled on, with the goal of being used to help recruiters and researchers.</span>
+												<span class="text personal"><a href="https://github.com/TiDeane/Link-Highlighter">Link Highlighter</a>: this browser extension was my first paid software project. It is a toggle that highlights all links clicked or opened while the extension was toggled on, with the goal of being used to help recruiters and researchers. Available on Google Chrome and Firefox.</span>
 											</li>
 										</ul>
 
